Rewrite script parser functions for header/parameter loading